@@ -1,7 +1,9 @@
 package com.joshlong.blog;
 
+import com.joshlong.blog.index.IndexingFinishedEvent;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Qualifier;
+import org.springframework.context.event.EventListener;
 import org.springframework.graphql.data.method.annotation.Argument;
 import org.springframework.graphql.data.method.annotation.QueryMapping;
 import org.springframework.graphql.data.method.annotation.SchemaMapping;
@@ -12,7 +14,9 @@ import reactor.core.publisher.Mono;
 import java.text.DateFormat;
 import java.util.Collection;
 import java.util.Comparator;
+import java.util.List;
 import java.util.Locale;
+import java.util.concurrent.CopyOnWriteArrayList;
 import java.util.function.ToLongFunction;
 import java.util.stream.Collectors;
 
@@ -24,165 +28,149 @@ import java.util.stream.Collectors;
 @Controller
 class ApiGraphQlController {
 
-	private final int heroParagraphLength = 400;
+    private final List<BlogPost> postsOrderedNewestToOldest = new CopyOnWriteArrayList<>();
 
-	private final IndexService indexService;
+    private final IndexService indexService;
 
-	private final AppearanceService appearanceService;
+    private final AppearanceService appearanceService;
 
-	private final PodcastService podcastService;
+    private final PodcastService podcastService;
 
-	private final DateFormat isoDateFormat;
+    private final DateFormat isoDateFormat;
 
-	private final SpringTipsService springTipsService;
+    private final SpringTipsService springTipsService;
 
-	private final ContentService booksContentService;
+    private final ContentService booksContentService;
 
-	private final ContentService livelessonsContentService;
+    private final ContentService livelessonsContentService;
 
-	ApiGraphQlController(IndexService indexService,
-			@Qualifier("booksContentService") ContentService booksContentService, SpringTipsService springTipsService,
-			@Qualifier("livelessonsContentService") ContentService livelessonsContentService,
-			AppearanceService appearanceService, PodcastService podcastService, DateFormat isoDateFormat) {
-		this.indexService = indexService;
-		this.appearanceService = appearanceService;
-		this.podcastService = podcastService;
-		this.isoDateFormat = isoDateFormat;
-		this.booksContentService = booksContentService;
-		this.livelessonsContentService = livelessonsContentService;
-		this.springTipsService = springTipsService;
-	}
 
-	@QueryMapping
-	Collection<Appearance> appearances() {
-		return this.appearanceService.getAppearances();
-	}
+    ApiGraphQlController(IndexService indexService,
+                         @Qualifier("booksContentService") ContentService booksContentService, SpringTipsService springTipsService,
+                         @Qualifier("livelessonsContentService") ContentService livelessonsContentService,
+                         AppearanceService appearanceService, PodcastService podcastService, DateFormat isoDateFormat) {
+        this.indexService = indexService;
+        this.appearanceService = appearanceService;
+        this.podcastService = podcastService;
+        this.isoDateFormat = isoDateFormat;
+        this.booksContentService = booksContentService;
+        this.livelessonsContentService = livelessonsContentService;
+        this.springTipsService = springTipsService;
+    }
 
-	@QueryMapping
-	Collection<BlogPost> recentBlogPosts(@Argument int count) {
-		var index = this.indexService.getIndex();
-		var blogs = index.values();
-		return blogs.stream()
-				.sorted(Comparator.comparingLong((ToLongFunction<BlogPost>) value -> value.date().getTime()).reversed())
-				.limit(count).collect(Collectors.toList());
-	}
+    @EventListener(IndexingFinishedEvent.class)
+    public void refresh() {
+        log.info("caching the blogPost collection newest to oldest.");
+        var index = this.indexService.getIndex();
+        var blogs = index.values();
+        var results = blogs
+                .stream() //
+                .sorted(Comparator.comparingLong((ToLongFunction<BlogPost>) value -> value.date().getTime()).reversed()) //
+                .toList();
+        this.postsOrderedNewestToOldest.addAll(results);
+    }
 
-	@QueryMapping
-	Collection<Content> livelessons() {
-		return this.livelessonsContentService.getContent();
-	}
+    @QueryMapping
+    Collection<Appearance> appearances() {
+        return this.appearanceService.getAppearances();
+    }
 
-	@QueryMapping
-	Collection<Content> books() {
-		return this.booksContentService.getContent();
-	}
+    @QueryMapping
+    Collection<BlogPost> recentBlogPosts(@Argument int count) {
+        return postsOrderedNewestToOldest.stream().limit(count).toList();
+    }
 
-	@QueryMapping
-	Collection<BlogPost> blogPosts() {
-		return this.indexService.getIndex().values();
-	}
+    @QueryMapping
+    BlogPostSearchResults search(@Argument String query, @Argument int offset, @Argument int pageSize) {
+        return this.indexService.search(query, offset, pageSize);
+    }
 
-	@QueryMapping
-	Mono<BlogPost> blogPostByPath(@Argument String path) {
-		var index = this.indexService.getIndex();
-		var nk = path.toLowerCase(Locale.ROOT);
+    @QueryMapping
+    Mono<BlogPost> blogPostByPath(@Argument String path) {
+        var index = this.indexService.getIndex();
+        var nk = path.toLowerCase(Locale.ROOT);
 
-		if (index.containsKey(nk))
-			return Mono.just(index.get(nk));
+        if (index.containsKey(nk))
+            return Mono.just(index.get(nk));
 
-		nk = "/jl/blogpost/" + nk;
-		if (index.containsKey(nk))
-			return Mono.just(index.get(nk));
+        nk = "/jl/blogpost/" + nk;
+        if (index.containsKey(nk))
+            return Mono.just(index.get(nk));
 
-		return Mono.empty();
-	}
+        return Mono.empty();
+    }
 
-	@QueryMapping
-	Collection<Podcast> podcasts() {
-		return this.podcastService.getPodcasts();
-	}
 
-	@SchemaMapping(typeName = "Podcast", field = "date")
-	String date(Podcast p) {
-		return null != p.date() ? this.isoDateFormat.format(p.date()) : null;
-	}
+    @QueryMapping
+    Collection<Content> livelessons() {
+        return this.livelessonsContentService.getContent();
+    }
 
-	@QueryMapping
-	Collection<BlogPost> search(@Argument String query) {
-		return this.indexService.search(query);
-	}
+    @QueryMapping
+    Collection<Content> books() {
+        return this.booksContentService.getContent();
+    }
 
-	@SchemaMapping(typeName = "Appearance", field = "startDate")
-	String startDate(Appearance bp) {
-		return isoDateFormat.format(bp.startDate());
-	}
+    @QueryMapping
+    Collection<Podcast> podcasts() {
+        return this.podcastService.getPodcasts();
+    }
 
-	@SchemaMapping(typeName = "Appearance", field = "endDate")
-	String endDate(Appearance bp) {
-		return isoDateFormat.format(bp.endDate());
-	}
+    @SchemaMapping(typeName = "Podcast", field = "date")
+    String date(Podcast p) {
+        return null != p.date() ? this.isoDateFormat.format(p.date()) : null;
+    }
 
-	@SchemaMapping(typeName = "BlogPost", field = "date")
-	String date(BlogPost bp) {
-		return isoDateFormat.format(bp.date());
-	}
 
-	@SchemaMapping(typeName = "BlogPost")
-	String heroImage(BlogPost blogPost) {
-		return blogPost.images() != null && blogPost.images().size() > 0 ? blogPost.images().get(0) : null;
-	}
+    @SchemaMapping(typeName = "Appearance", field = "startDate")
+    String startDate(Appearance bp) {
+        return isoDateFormat.format(bp.startDate());
+    }
 
-	// private final Map<String, Boolean> truncated = new ConcurrentHashMap<>();
-	//
-	// @EventListener(IndexingFinishedEvent.class)
-	// public void reset() {
-	// this.truncated.clear();
-	// }
+    @SchemaMapping(typeName = "Appearance", field = "endDate")
+    String endDate(Appearance bp) {
+        return isoDateFormat.format(bp.endDate());
+    }
 
-	/*
-	 * @SchemaMapping(typeName = "BlogPost") Boolean heroParagraphsTruncated(BlogPost
-	 * post) { var result = this.truncated.getOrDefault(post.pathId(), false);
-	 * log.info("are the hero paragraphs for " + post.title() + " truncated? " + result);
-	 * return result; }
-	 */
+    @SchemaMapping(typeName = "BlogPost", field = "date")
+    String date(BlogPost bp) {
+        return isoDateFormat.format(bp.date());
+    }
 
-	/**
-	 * add each word and check that the length of the current sentence plus the new word
-	 * isn't longer than {@link this#heroParagraphLength}. Once it is, stop collecting
-	 * words.
-	 */
-	@SchemaMapping(typeName = "BlogPost")
-	String heroParagraphs(BlogPost post) {
-		Assert.state(post.paragraphs() != null && post.paragraphs().size() > 0,
-				() -> "the paragraphs must be non-null");
-		return String.join(" ", post.paragraphs());
-	}
+    @SchemaMapping(typeName = "BlogPost")
+    String heroImage(BlogPost blogPost) {
+        return blogPost.images() != null && blogPost.images().size() > 0 ? blogPost.images().get(0) : null;
+    }
 
-	// new for the Spring Tips episodes
+    @SchemaMapping(typeName = "BlogPost")
+    String heroParagraphs(BlogPost post) {
+        Assert.state(post.paragraphs() != null && post.paragraphs().size() > 0, () -> "the paragraphs must be non-null");
+        return String.join(" ", post.paragraphs());
+    }
 
-	@QueryMapping
-	SpringTipsEpisode latestSpringTipsEpisode() {
-		return this.springTipsService.getLatestSpringTipsEpisode();
-	}
+    @QueryMapping
+    SpringTipsEpisode latestSpringTipsEpisode() {
+        return this.springTipsService.getLatestSpringTipsEpisode();
+    }
 
-	@QueryMapping
-	Collection<SpringTipsEpisode> springTipsEpisodes() {
-		return this.springTipsService.getSpringTipsEpisodes();
-	}
+    @QueryMapping
+    Collection<SpringTipsEpisode> springTipsEpisodes() {
+        return this.springTipsService.getSpringTipsEpisodes();
+    }
 
-	@SchemaMapping(typeName = "SpringTipsEpisode")
-	String date(SpringTipsEpisode springTipsEpisode) {
-		return this.isoDateFormat.format(springTipsEpisode.date());
-	}
+    @SchemaMapping(typeName = "SpringTipsEpisode")
+    String date(SpringTipsEpisode springTipsEpisode) {
+        return this.isoDateFormat.format(springTipsEpisode.date());
+    }
 
-	@SchemaMapping(typeName = "SpringTipsEpisode")
-	String blogUrl(SpringTipsEpisode episode) {
-		return episode.blogUrl().toString();
-	}
+    @SchemaMapping(typeName = "SpringTipsEpisode")
+    String blogUrl(SpringTipsEpisode episode) {
+        return episode.blogUrl().toString();
+    }
 
-	@SchemaMapping(typeName = "SpringTipsEpisode")
-	String youtubeEmbedUrl(SpringTipsEpisode springTipsEpisode) {
-		return springTipsEpisode.youtubeEmbedUrl().toString();
-	}
+    @SchemaMapping(typeName = "SpringTipsEpisode")
+    String youtubeEmbedUrl(SpringTipsEpisode springTipsEpisode) {
+        return springTipsEpisode.youtubeEmbedUrl().toString();
+    }
 
 }
